security with Bandit + several lybraries added

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,13 @@ repository = "https://github.com/unrip512/hypermodern-python"
 keywords = ["hypermodern"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9"
 click = "^7.0"
 requests = "^2.31.0"
+numpy = "^1.26.4"
+imageio = "^2.34.1"
+opencv-python = "^4.9.0.80"
+pillow = "^10.3.0"
 
 [tool.poetry.scripts]
 hypermodern-python = "hypermodern_python.console:main"
@@ -22,6 +26,7 @@ hypermodern-python = "hypermodern_python.console:main"
 pytest = "^8.1.1"
 coverage = {extras = ["toml"], version = "^7.4.4"}
 pytest-cov = "^5.0.0"
+pytest-mock = "^3.14.0"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
