--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ numpy = "^1.26.4"
 imageio = "^2.34.1"
 opencv-python = "^4.9.0.80"
 pillow = "^10.3.0"
+argparse = "^1.4.0"
 
 [tool.poetry.scripts]
 hypermodern-python = "hypermodern_python.console:main"
