add typing and documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,14 @@ pytest = "^8.1.1"
 coverage = {extras = ["toml"], version = "^7.4.4"}
 pytest-cov = "^5.0.0"
 pytest-mock = "^3.14.0"
+mypy = "^1.10.0"
+pytype = {version = "^2024.4.11", python = "3.8"}
+typeguard = "^4.2.1"
+flake8-annotations = "^3.0.1"
+flake8-docstrings = "^1.7.0"
+darglint = "^1.8.1"
+sphinx = "^7.3.7"
+sphinx-autodoc-typehints = "^2.1.0"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
