--- a/mypy.ini
+++ b/mypy.ini
@@ -2,3 +2,9 @@
 
 [mypy-nox.*, pytest, click]
 ignore_missing_imports = True
+
+[mypy-click]
+ignore_missing_imports = True
+
+[mypy-click.testing]
+ignore_missing_imports = True
