--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ imageio = "^2.34.1"
 opencv-python = "^4.9.0.80"
 pillow = "^10.3.0"
 argparse = "^1.4.0"
+sphinx-rtd-theme = "^2.0.0"
 
 [tool.poetry.scripts]
 hough_circle_transform = "hypermodern_python.console:main"
